--- a/optPreference.cfg
+++ b/optPreference.cfg
@@ -177,6 +177,12 @@
     // 2. 低频  cMot_bhop_half
     cMot_bhop_half
 
+    //是否开启增强连跳
+    //如果开启，按下跳跃键的时候，帧率将会被锁定在64
+    // 1.启用 cMot_betterbhop_enable
+    // 1.禁用 cMot_betterbhop_disable
+    cMot_betterbhop_enable
+
 // 滚轮设置
     // 修改滚轮设置
     // 1. 切枪        wheel_switch
