--- a/src/modules/cMot/bhop/init.cfg
+++ b/src/modules/cMot/bhop/init.cfg
@@ -10,8 +10,11 @@ alias cMot_bhop_jump_1 "cMot_bhop_pack;alias cMot_bhop_jump_nxt cMot_bhop_jump_0
 alias cMot_bhop_full alias cMot_bhop_jump cMot_bhop_pack
 alias cMot_bhop_half alias cMot_bhop_jump cMot_bhop_jump_nxt
 
-alias +cMot_bhop  "+cMot_autostop_disable_space;alias cMotTicker_9ms_bhop cMot_bhop_jump"
-alias -cMot_bhop "-cMot_autostop_disable_space;alias cMotTicker_9ms_bhop "
+alias +cMot_bhop  "needBetterbhop;+cMot_autostop_disable_space;alias cMotTicker_9ms_bhop cMot_bhop_jump"
+alias -cMot_bhop "rec_fps_max;-cMot_autostop_disable_space;alias cMotTicker_9ms_bhop "
 
 alias cMot_bhop_better_enable  "alias +cMot_bhop_lockfps fps_max 64;alias -cMot_bhop_lockfps cMot_bhop_fps_max"
 alias cMot_bhop_better_disable "alias +cMot_bhop_lockfps ;alias -cMot_bhop_lockfps "
+
+alias cMot_betterbhop_enable "alias needBetterbhop fps_max 64"
+alias cMot_betterbhop_disable "alias needBetterbhop"
